; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_parser.c_set_threads_num.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_parser.c_set_threads_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.configuration = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.configuration*, i32)* @set_threads_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_threads_num(%struct.configuration* %0, i32 %1) #0 {
  %3 = alloca %struct.configuration*, align 8
  %4 = alloca i32, align 4
  store %struct.configuration* %0, %struct.configuration** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.configuration*, %struct.configuration** %3, align 8
  %6 = icmp ne %struct.configuration* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.configuration*, %struct.configuration** %3, align 8
  %11 = getelementptr inbounds %struct.configuration, %struct.configuration* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
